# sync_files

./: Cargo.toml  build.rs
src/: cli.rs  main.rs
src/config/: mod.rs
src/hash/: mod.rs
src/ssh/: connection.rs
tests/: rpi.toml
